--- a/app/views/pages/cadastro.ejs
+++ b/app/views/pages/cadastro.ejs
@@ -15,7 +15,7 @@
 
     <header>
         <nav class="grid">
-            <a href="/">
+            <a href="javascript:void(0)" onclick="goBack()">
                 <img src="imagens/seta.png" alt="Seta Voltar">
             </a>
             <img src="imagens/logo.png" alt="Logo" class="logo-vintelo">
@@ -25,7 +25,7 @@
     <main class="login-container">
         <aside class="image-section">
             <section class="seta">
-                <a href="/">
+                <a href="javascript:void(0)" onclick="goBack()">
                     <img src="imagens/seta.png">
                 </a>
             </section>
@@ -265,12 +265,15 @@
         }
     </script>
 
-    <script>
+                <script>
         window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
         <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
         window.userType = '<%= autenticado.tipo %>';
+        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %>
+        window.userType = 'c';
         <% } %>
     </script>
+    <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
 </body>
 </html>
