--- a/app/views/pages/cadastroadm.ejs
+++ b/app/views/pages/cadastroadm.ejs
@@ -11,7 +11,7 @@
 <body>
     <!-- Header Mobile -->
     <header class="mobile-header">
-        <a href="/homeadm">
+        <a href="javascript:void(0)" onclick="goBack()">
             <img src="imagens/seta.png" alt="Voltar">
         </a>
         <img src="imagens/logo.png" alt="Logo" style="height: 40px;">
@@ -196,12 +196,15 @@
         <p class="copyright">©2024 Vintélo Admin. Todos os direitos reservados.</p>
     </footer>
 
-    <script>
+                <script>
         window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
         <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
         window.userType = '<%= autenticado.tipo %>';
+        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %>
+        window.userType = 'c';
         <% } %>
     </script>
+    <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
 </body>
 </html>
