--- a/app/views/pages/minhascompras.ejs
+++ b/app/views/pages/minhascompras.ejs
@@ -177,10 +177,15 @@
        <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
     
-    <script>
+                <script>
         window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
-        window.userType = '<%= typeof autenticado !== 'undefined' && autenticado && autenticado.tipo ? autenticado.tipo : 'c' %>';
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %>
+        window.userType = 'c';
+        <% } %>
     </script>
+    <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
     <script src="script/minhascompras.js"></script>
     <script src="/js/busca-global.js"></script>
