--- a/app/public/css/cadastroadm.css
+++ b/app/public/css/cadastroadm.css
@@ -311,19 +311,19 @@ body {
     }
     
     .page-title {
-        text-align: center;
+        text-align: left;
         margin-bottom: 30px;
     }
     
     .garimpe-text {
         font-size: 16px;
         display: block;
-        text-align: center;
+        text-align: left;
     }
     
     .vintelo-text {
         font-size: 28px;
         display: block;
-        text-align: center;
+        text-align: left;
     }
 }
