--- a/app/public/css/finalizando2.css
+++ b/app/public/css/finalizando2.css
@@ -206,9 +206,11 @@ h3 {
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.274);
   }
   
-  .product-card img {
+  .product-card > a img,
+  .product-card > img {
     width: 90%;
-    height: auto;
+    height: 400px;
+    object-fit: cover;
     border-radius: 8px;
   }
   
@@ -230,7 +232,6 @@ h3 {
   .favorite, .cart {
     background: none;
     border: none;
-    font-size: 50px;
     position: absolute;
     cursor: pointer;
   }
@@ -241,9 +242,19 @@ h3 {
     color: #8b0000;
   }
   
+  .favorite img {
+    width: auto;
+    height: auto;
+  }
+  
   .cart {
     bottom: 10px;
     right: 30px;
+  }
+  
+  .cart img {
+    width: auto;
+    height: auto;
   }
 
  .link-branco {
