--- a/app/views/pages/perfilvendedor.ejs
+++ b/app/views/pages/perfilvendedor.ejs
@@ -20,7 +20,7 @@
             <nav>
                 <a href="/adicionar">Vender</a>
                 <a href="/estatistica">Estatísticas</a>
-                <a href="/premium">Premium</a>
+                <a href="/planos">Premium</a>
                 <a href="/categorias">Categorias</a>
                 <a href="/blog">Blog</a>
             </nav>
