--- a/app/public/css/estilo.css
+++ b/app/public/css/estilo.css
@@ -1314,6 +1314,12 @@ h3 {
   text-align: center;
 }
 
+.artigos-title-1 {
+  color: #7a2d39;
+  font-size: 40px;
+  text-align: center;
+}
+
 .container {
   display: flex;
   justify-content: space-between;
