--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -299,10 +299,9 @@
           <img src="imagens/brecho1.png" alt="Mayte" class="profile-image">
           <section class="profile-info">
             <strong>Mayte</strong>
-            <span class="rating">4.9 <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span></span>
-
-
-
+            <span class="rating">4.9 ⭐⭐⭐⭐⭐</span>
+          </section>
+  
           </section>
           <a href="/perfil1"><button class="follow-button">Favoritar</button></a>
         </li>
@@ -341,7 +340,8 @@
         <br>
         <br>
         <section class="artigos-section">
-          <h2>Conheça os <br><span class="artigos-title">Artigos</span></h2>
+          <span class="artigos-title-1">Artigos</span></h2>
+          <span class="artigos-title">Artigos</span></h2>
           <br>
           <section class="container">
             <!-- Artigo de Moda Metalizada -->
@@ -448,8 +448,8 @@
         </section>
         <!--                                        Seção de artigos                                               -->
         <section class="titulo-artigo-section">
-          <span class="garimpe-text">Tendências na</span><br>
-          <span class="vintelo-text">Vintélo</span>
+          <span class="garimpe-text">Conheça os</span><br>
+          <span class="vintelo-text">Artigos</span>
         </section>
         <section class="artigos">
           <br>
